# scrapy-news

./: .gitignore  README.md  datetime_formatter.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: scrapy.yaml
yahoo/: common_func.py  const.py  date_util.py  items.py  middlewares.py  models.py  pipelines.py  run_scrapy.py  settings.py  str_util.py
yahoo/spiders/: news.py
