[tool.poetry]
name = "scrapy-news"
version = "0.1.0"
description = ""
authors = ["kawano <nanaki610@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
astroid = "2.5.8"
attrs = "23.2.0"
automat = "22.10.0"
autopep8 = "1.5.6"
backcall = "0.2.0"
build = "1.2.1"
cachecontrol = "0.14.0"
certifi = "2024.7.4"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
constantly = "23.10.4"
crashtest = "0.4.1"
cryptography = "38.0.1"
cssselect = "1.2.0"
decorator = "5.1.1"
distlib = "0.3.8"
dnspython = "1.16.0"
docker = "7.1.0"
dulwich = "0.21.7"
fastjsonschema = "2.20.0"
filelock = "3.15.4"
greenlet = "1.1.3"
hyperlink = "21.0.0"
idna = "3.7"
importlib-metadata = "8.0.0"
importlib-resources = "6.4.0"
incremental = "22.10.0"
installer = "0.7.0"
ipython = "7.22.0"
isort = "5.13.2"
itemadapter = "0.9.0"
itemloaders = "1.3.1"
jaraco-classes = "3.4.0"
jedi = "0.19.1"
jeepney = "0.8.0"
jmespath = "1.0.1"
keyring = "24.3.1"
lazy-object-proxy = "1.10.0"
lxml = "5.2.2"
mccabe = "0.6.1"
more-itertools = "10.3.0"
msgpack = "1.0.8"
packaging = "24.1"
parsel = "1.7.0"
parso = "0.8.4"
pexpect = "4.9.0"
pickleshare = "0.7.5"
pillow = "8.2.0"
pkginfo = "1.11.1"
platformdirs = "4.2.2"
playwright = "1.27.1"
poetry = "1.8.3"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
prompt-toolkit = "3.0.47"
protego = "0.3.1"
ptyprocess = "0.7.0"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pycodestyle = "2.12.0"
pycparser = "2.22"
pydispatcher = "2.0.7"
pyee = "8.1.0"
pygments = "2.18.0"
pylint = "2.7.2"
pymongo = "3.11.3"
pyopenssl = "22.0.0"
pyproject-hooks = "1.1.0"
python-dotenv = "1.0.1"
pytz = "2024.1"
pyyaml = "6.0.1"
queuelib = "1.7.0"
rapidfuzz = "3.9.4"
requests = "2.32.3"
requests-file = "2.1.0"
requests-toolbelt = "1.0.0"
retrying = "1.3.4"
scrapinghub = "2.4.0"
scrapy = "2.11.1"
scrapy-playwright = "0.0.26"
scrapy-selenium = "0.0.7"
secretstorage = "3.3.3"
selenium = "3.141.0"
service-identity = "24.1.0"
shellingham = "1.5.4"
shub = "2.15.4"
six = "1.16.0"
sqlalchemy = "2.0.31"
tldextract = "5.1.2"
toml = "0.10.2"
tomli = "2.0.1"
tomlkit = "0.12.5"
tqdm = "4.55.1"
traitlets = "5.14.3"
trove-classifiers = "2024.7.2"
twisted = "22.10.0"
typing-extensions = "4.12.2"
urllib3 = "1.26.15"
virtualenv = "20.26.3"
w3lib = "2.2.1"
wcwidth = "0.2.13"
wrapt = "1.12.1"
zipp = "3.19.2"
zope-interface = "6.4.post2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
